force-app/main/default/objects/HAM_Event_Ticket__c/HAM_Event_Ticket__c.object-meta.xml
<CustomObject>
    <label>Event Ticket</label>
    <nameField>
        <label>Event Ticket Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>