force-app/main/default/objects/HAM_Event_Ticket__c/fields/CventEvents_Event__c.field-meta.xml
<CustomField>
    <fullName>CventEvents_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this ticket to its parent Cvent event record.</description>
    <inlineHelpText>The Cvent event this ticket belongs to.</inlineHelpText>
    <label>Cvent Event</label>
    <referenceTo>CventEvents__Event__c</referenceTo>
    <relationshipLabel>Event Tickets</relationshipLabel>
    <relationshipName>Event_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>