force-app/main/default/objects/HAM_Event_Ticket__c/fields/HAM_BT_Event_Item__c.field-meta.xml
<CustomField>
    <fullName>HAM_BT_Event_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the originating Blackthorn event item record. Provides a navigable back-link for validation and cross-reference.</description>
    <inlineHelpText>Click to navigate to the original Blackthorn ticket record. Null indicates this record was not migrated from Blackthorn.</inlineHelpText>
    <label>BT Event Item</label>
    <referenceTo>conference360__Event_Item__c</referenceTo>
    <relationshipLabel>Event Tickets</relationshipLabel>
    <relationshipName>Event_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>