force-app/main/default/objects/HAM_Event_Ticket__c/fields/HAM_Description__c.field-meta.xml
<CustomField>
    <fullName>HAM_Description__c</fullName>
    <description>Full description of this ticket carried over from Blackthorn.</description>
    <inlineHelpText>The ticket description as it appeared in Blackthorn.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>