force-app/main/default/objects/HAM_Event_Ticket__c/fields/HAM_Event_Revenue_Amount__c.field-meta.xml
<CustomField>
    <fullName>HAM_Event_Revenue_Amount__c</fullName>
    <description>mapping from conference360__Event_Item__c
 HAM_Event_Revenue_Amount__c</description>
    <label>Event Revenue Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>