force-app/main/default/objects/HAM_Event_Ticket__c/fields/HAM_Event_Revenue_GL__c.field-meta.xml
<CustomField>
    <fullName>HAM_Event_Revenue_GL__c</fullName>
    <description>Hamilton-specific GL number for event revenue associated with this ticket.</description>
    <inlineHelpText>The General Ledger number for revenue tracking. Carried over from Blackthorn.</inlineHelpText>
    <label>Event Revenue GL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>