force-app/main/default/objects/HAM_Event_Ticket__c/fields/HAM_Free__c.field-meta.xml
<CustomField>
    <fullName>HAM_Free__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this ticket was free in Blackthorn.</description>
    <inlineHelpText>Checked if this is a free ticket.</inlineHelpText>
    <label>Free</label>
    <type>Checkbox</type>
</CustomField>