force-app/main/default/objects/HAM_Event_Ticket__c/fields/HAM_Gift_Designation__c.field-meta.xml
<CustomField>
    <fullName>HAM_Gift_Designation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Hamilton-specific gift designation linked to this ticket for advancement tracking.</description>
    <inlineHelpText>The gift designation associated with this ticket. Carried over from Blackthorn.</inlineHelpText>
    <label>Gift Designation</label>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>Event Tickets</relationshipLabel>
    <relationshipName>Event_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>