force-app/main/default/objects/HAM_Event_Ticket__c/fields/HAM_Hidden__c.field-meta.xml
<CustomField>
    <fullName>HAM_Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this ticket type is hidden from the public registration page.</description>
    <inlineHelpText>Check if this ticket type should be hidden from the public event registration page.</inlineHelpText>
    <label>Hidden</label>
    <type>Checkbox</type>
</CustomField>