force-app/main/default/objects/HAM_Event_Ticket__c/fields/HAM_Internal_Name__c.field-meta.xml
<CustomField>
    <fullName>HAM_Internal_Name__c</fullName>
    <description>The internal/record name of this ticket carried over from the Blackthorn record Name field.</description>
    <inlineHelpText>Internal name used for identification. Carried over from Blackthorn.</inlineHelpText>
    <label>Internal Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>