force-app/main/default/objects/HAM_Event_Ticket__c/fields/HAM_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>HAM_Item_Name__c</fullName>
    <description>The display name of this ticket item carried over from Blackthorn.</description>
    <inlineHelpText>The ticket name as it appeared in Blackthorn.</inlineHelpText>
    <label>Item Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>