force-app/main/default/objects/HAM_Event_Ticket__c/fields/HAM_Net_Revenue__c.field-meta.xml
<CustomField>
    <fullName>HAM_Net_Revenue__c</fullName>
    <description>Net revenue generated by this ticket type after discounts and refunds.</description>
    <inlineHelpText>Net revenue for this ticket type after discounts and refunds.</inlineHelpText>
    <label>Net Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>