force-app/main/default/objects/HAM_Event_Ticket__c/fields/HAM_Price__c.field-meta.xml
<CustomField>
    <fullName>HAM_Price__c</fullName>
    <description>The ticket price carried over from Blackthorn.</description>
    <inlineHelpText>Price of this ticket. 0 indicates a free ticket.</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>