force-app/main/default/objects/HAM_Event_Ticket__c/fields/HAM_Quantity_Available__c.field-meta.xml
<CustomField>
    <fullName>HAM_Quantity_Available__c</fullName>
    <description>Total number of tickets made available, carried over from Blackthorn.</description>
    <inlineHelpText>How many tickets were available for purchase.</inlineHelpText>
    <label>Quantity Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>