force-app/main/default/objects/HAM_Event_Ticket__c/fields/HAM_Quantity_Sold__c.field-meta.xml
<CustomField>
    <fullName>HAM_Quantity_Sold__c</fullName>
    <description>Total number of tickets sold, carried over from Blackthorn.</description>
    <inlineHelpText>How many tickets were sold.</inlineHelpText>
    <label>Quantity Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>