force-app/main/default/objects/HAM_Event_Ticket__c/fields/HAM_Remaining_Quantity__c.field-meta.xml
<CustomField>
    <fullName>HAM_Remaining_Quantity__c</fullName>
    <description>Number of tickets of this type still available for purchase.</description>
    <inlineHelpText>Remaining available quantity for this ticket type.</inlineHelpText>
    <label>Remaining Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>