force-app/main/default/objects/HAM_Event_Ticket__c/fields/HAM_Sales_End_Date__c.field-meta.xml
<CustomField>
    <fullName>HAM_Sales_End_Date__c</fullName>
    <description>The date ticket sales closed, carried over from Blackthorn.</description>
    <inlineHelpText>When ticket sales ended.</inlineHelpText>
    <label>Sales End Date</label>
    <type>Date</type>
</CustomField>