force-app/main/default/objects/HAM_Event_Ticket__c/fields/HAM_Sales_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>HAM_Sales_Start_Date__c</fullName>
    <description>The date ticket sales opened, carried over from Blackthorn.</description>
    <inlineHelpText>When ticket sales started.</inlineHelpText>
    <label>Sales Start Date</label>
    <type>Date</type>
</CustomField>