force-app/main/default/objects/HAM_Event_Ticket__c/fields/HAM_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>HAM_Sort_Order__c</fullName>
    <description>Display sort order for this ticket carried over from Blackthorn.</description>
    <inlineHelpText>Controls the order tickets are displayed. Lower numbers appear first.</inlineHelpText>
    <label>Sort Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>