force-app/main/default/objects/HAM_Event_Ticket__c/fields/HAM_Total_Discounts__c.field-meta.xml
<CustomField>
    <fullName>HAM_Total_Discounts__c</fullName>
    <description>Total discount amount applied across all sales of this ticket type.</description>
    <inlineHelpText>Total discounts applied to this ticket type across all registrations.</inlineHelpText>
    <label>Total Discounts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>