force-app/main/default/objects/HAM_Event_Ticket__c/fields/HAM_Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>HAM_Total_Revenue__c</fullName>
    <description>Total revenue generated by this ticket type including all fees and taxes.</description>
    <inlineHelpText>Total revenue for this ticket type including fees and taxes.</inlineHelpText>
    <label>Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>