force-app/main/default/objects/HAM_Event_Ticket__c/fields/HAM_Total_Ticket_Revenue__c.field-meta.xml
<CustomField>
    <fullName>HAM_Total_Ticket_Revenue__c</fullName>
    <description>Total ticket-only revenue for this ticket type, excluding additional fees and add-ons.</description>
    <inlineHelpText>Total revenue from ticket sales only, excluding additional fees.</inlineHelpText>
    <label>Total Ticket Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>