force-app/main/default/objects/HAM_Event_Ticket__c/fields/HAM_Type__c.field-meta.xml
<CustomField>
    <fullName>HAM_Type__c</fullName>
    <description>Ticket type carried over from the Blackthorn source record.</description>
    <inlineHelpText>The ticket type as it appeared in Blackthorn.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>