force-app/main/default/objects/HAM_Event_Ticket__c/fields/HAM_Waitlist_Capacity__c.field-meta.xml
<CustomField>
    <fullName>HAM_Waitlist_Capacity__c</fullName>
    <description>Maximum number of registrants that can be placed on the waitlist for this ticket type.</description>
    <inlineHelpText>Maximum waitlist capacity for this ticket type.</inlineHelpText>
    <label>Waitlist Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>