force-app/main/default/objects/HAM_Event_Ticket__c/fields/HAM_Waitlisted__c.field-meta.xml
<CustomField>
    <fullName>HAM_Waitlisted__c</fullName>
    <description>Number of registrants currently on the waitlist for this ticket type.</description>
    <inlineHelpText>Current number of waitlisted registrants for this ticket type.</inlineHelpText>
    <label>Waitlisted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>